--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -227,6 +227,15 @@
         line-height: 12px;
     }
 
+    .feedback-button {
+        font-size: 12px;
+        line-height: 12px;
+    }
+
+    .feedback-button>i {
+        font-size: 14px;
+    }
+
     .search-submit-button {
         font-size: 16px;
         margin-top: -29px;
