--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -116,7 +116,7 @@
     }
 
     * {
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Noto Sans', sans-serif;
         font-style: normal;
         font-weight: 400;
         font-size: 12px;
