--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -412,10 +412,10 @@ hr {
         margin-left: 6px;
     }
 
-    .wide-search-container input {
+    .wide-search-container input[type='text'] {
         padding: 0 46px 0 20px;
-        font-size: 10px;
-        line-height: 10px;
+        font-size: 12px;
+        line-height: 12px;
         height: 42px;
     }
 
