mobile styles fixes

--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -393,19 +393,20 @@
 
     .feedback-card-username {
         margin: 0;
-        font-size: 16px;
-        line-height: 20px;
+        font-size: 18px;
+        line-height: 22px;
         width: max-content;
     }
 
     .feedback-card-rating {
         row-gap: 8px;
+        column-gap: 12px;
     }
 
-    .feedback-card-rating>span {
+    /* .feedback-card-rating>span {
         font-size: 10px;
         line-height: 10px;
-    }
+    } */
 
     .feedback-card-rating>div {
         gap: 5px;
@@ -416,8 +417,8 @@
     }
 
     .feedback-card-container>p {
-        font-size: 10px;
-        line-height: 14px;
+        font-size: 12px;
+        line-height: 16px;
     }
 
     .feedback-service-name {
@@ -437,11 +438,11 @@
     }
 
     .feedback-service-likes {
-        gap: 4px;
+        gap: 6px;
     }
 
     .feedback-service-likes>i {
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .feedback-service-likes>div {
