--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -459,21 +459,21 @@
     .home-welcome-container {
         margin: 16px 16px 32px;
         grid-template-columns: 1fr;
-        row-gap: 16px;
+        row-gap: 24px;
     }
 
     .home-welcome-left-block>h1 {
-        font-size: 20px;
-        line-height: 24px;
+        font-size: 22px;
+        line-height: 26px;
         text-align: center;
         margin-bottom: 12px;
     }
 
     .home-welcome-left-block>p {
-        font-size: 10px;
-        line-height: 14px;
+        font-size: 12px;
+        line-height: 16px;
         text-align: center;
-        max-width: 300px;
+        max-width: 333px;
         margin: 0 auto;
     }
 
@@ -487,7 +487,7 @@
 
     .home-welcome-buttons {
         justify-content: center;
-        gap: 12px;
+        gap: 8px;
     }
 
     .home-categories-container {
@@ -546,8 +546,8 @@
 
     .home-section-title>h2 {
         font-weight: 600;
-        font-size: 16px;
-        line-height: 16px;
+        font-size: 20px;
+        line-height: 20px;
     }
 
     .home-services-cards {
@@ -632,8 +632,8 @@
     }
 
     .home-feedback-header>h2 {
-        font-size: 16px;
-        line-height: 16px;
+        font-size: 20px;
+        line-height: 20px;
     }
 
     .home-feedback-header>a {
@@ -654,7 +654,7 @@
         padding: 12px 16px;
         flex-direction: column;
         align-items: flex-start;
-        height: 148px;
+        /* height: 148px; */
     }
 
     .home-subscription-container h2 {
@@ -681,9 +681,9 @@
 
     .home-subscription-buttons>button {
         padding: 0 16px;
-        height: 36px;
-        font-size: 10px;
-        line-height: 10px;
+        height: 42px;
+        font-size: 14px;
+        line-height: 14px;
     }
 
     .home-subscription-buttons>#vk>i,
