--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -196,8 +196,8 @@
 
 @media screen and (max-width: 576px) {
     .category-tag-button {
-        padding: 4px 8px;
-        font-size: 8px;
+        // padding: 4px 8px;
+        font-size: 10px;
 
         .category-tag-name {
             line-height: 8px;
