--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -356,11 +356,11 @@ hr {
 
 @keyframes spin {
     0% {
-        transform: translate(-50%, -50%) rotate(0deg);
+        transform: rotate(0deg);
     }
 
     100% {
-        transform: translate(-50%, -50%) rotate(360deg);
+        transform: rotate(360deg);
     }
 }
 
