admin workspace categories

--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -24,7 +24,7 @@
 
         label {
             display: grid;
-            grid-template-columns: 80px auto;
+            grid-template-columns: minmax(80px, min-content) auto;
             align-items: center;
             justify-items: flex-start;
             gap: 16px;
@@ -57,6 +57,10 @@
                 border-radius: 12px;
                 cursor: pointer;
             }
+        }
+
+        i {
+            color: #386BEE;
         }
     }
 }
