--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -202,9 +202,16 @@
     font-size: 20px;
 }
 
+.user-admin-panel-table-split {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 24px;
+}
+
 .user-admin-panel-table {
     display: grid;
     gap: 16px;
+    height: max-content;
 }
 
 .user-admin-panel-table-header {
@@ -254,7 +261,7 @@
 }
 
 .user-admin-panel-table-content {
-    height: 505px;
+    max-height: 505px;
     overflow: auto;
     font-weight: 400;
     font-size: 14px;
@@ -312,6 +319,11 @@
 .user-admin-panel-table-row-head#categories,
 .user-admin-panel-table-row#categories {
     grid-template-columns: 5% auto 7% 13% 5%;
+}
+
+.user-admin-panel-table-row-head#locations-platforms,
+.user-admin-panel-table-row#locations-platforms {
+    grid-template-columns: 10% auto 10%;
 }
 
 .user-admin-panel-table-content>.user-admin-panel-table-row:nth-child(2n) {
