--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -13,10 +13,12 @@
     display: flex;
     align-items: center;
     gap: 24px;
+    order: 1;
 }
 
 .user-profile-admin-button-container {
     margin-right: auto;
+    order: 2;
 }
 
 .user-profile-admin-button {
@@ -36,6 +38,7 @@
 
 .user-profile-edit-button-container {
     width: auto;
+    order: 3;
 }
 
 .user-profile-modes {
@@ -386,6 +389,7 @@
     .user-profile-header-container {
         /* flex-direction: column; */
         /* align-items: flex-start; */
+        flex-wrap: wrap;
         gap: 16px;
         margin-bottom: 20px;
     }
@@ -394,8 +398,14 @@
         gap: 16px;
     }
 
+    .user-profile-admin-button-container {
+        order: 3;
+        margin: 0 auto;
+    }
+
     .user-profile-edit-button-container {
         width: min-content;
+        order: 2;
     }
 
     .user-profile-modes {
@@ -408,12 +418,6 @@
         flex-direction: column;
         align-items: flex-start;
         gap: 16px;
-    }
-
-    .user-profile-modes>button {
-        font-size: 10px;
-        line-height: 10px;
-        padding: 14px 16px;
     }
 
     .user-profile-edit-container {
