--- a/src/static/css/services.css
+++ b/src/static/css/services.css
@@ -1025,11 +1025,12 @@
     position: absolute;
     top: -4px;
     right: -4px;
-    width: 20px;
-    height: 20px;
-    background: #386BEE;
+    width: 24px;
+    height: 24px;
+    background: #FF2038;
     color: #FFFFFF;
     border-radius: 50%;
+    font-size: 16px;
     cursor: pointer;
     display: none;
 }
