--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -22,7 +22,8 @@
         display: grid;
         gap: 16px;
 
-        label {
+        label,
+        &>div {
             display: grid;
             grid-template-columns: minmax(80px, min-content) auto;
             align-items: center;
@@ -33,7 +34,8 @@
             line-height: 14px;
             color: rgba(45, 67, 121, 0.6);
 
-            input {
+            input[type='text'],
+            textarea {
                 border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
                 border-radius: 12px;
                 padding: 2px 10px;
@@ -45,6 +47,12 @@
                 color: #2D4379;
                 width: 300px;
                 height: 30px;
+            }
+
+            textarea {
+                padding: 10px;
+                height: 100px;
+                resize: none;
             }
 
             select {
@@ -61,6 +69,17 @@
 
         i {
             color: #386BEE;
+        }
+
+        .popup-type-selection {
+            display: flex;
+            align-items: center;
+            gap: 24px;
+
+            label {
+                display: flex;
+                color: #2D4379;
+            }
         }
     }
 }
