--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -65,6 +65,19 @@
                 border-radius: 12px;
                 cursor: pointer;
             }
+
+            .popup-service-select {
+                width: 100%;
+
+                &:disabled {
+                    cursor: not-allowed;
+                }
+            }
+
+            input[type='text']:disabled {
+                background: #eee;
+                cursor: not-allowed;
+            }
         }
 
         i {
