admin user edit popup, toggle service hidden status

--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -80,6 +80,10 @@
             }
         }
 
+        label#extended {
+            grid-template-columns: minmax(100px, min-content) auto;
+        }
+
         i {
             color: #386BEE;
         }
