--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -344,6 +344,11 @@
     grid-template-columns: 5% 15% 15% 15% 15% auto 5%;
 }
 
+.user-admin-panel-table-row-head#collections,
+.user-admin-panel-table-row#collections {
+    grid-template-columns: 5% 25% auto 13% 5%;
+}
+
 .user-admin-panel-table-content>.user-admin-panel-table-row:nth-child(2n) {
     background: #F4F7FF;
 }
