--- a/src/static/css/popup.less
+++ b/src/static/css/popup.less
@@ -13,6 +13,8 @@
     // font-family: 'Montserrat', sans-serif;
     // font-style: normal;
     width: 600px;
+    max-height: 800px;
+    overflow: scroll;
     box-sizing: border-box;
     display: grid;
     justify-items: center;
